--- a/apps/weights/src/index.css
+++ b/apps/weights/src/index.css
@@ -15,8 +15,6 @@
 }
 
 div {
-  padding-top: 2px;
-  padding-bottom: 2px;
   user-select: none;
 }
 
